[package]
name = "krater"
version = "0.4.0"
edition = "2024"
description = "Open-Source Intelligence (OSINT) gathering tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/amrosia/krater"

[dependencies]
async-trait = "0.1.86"
clap = { version = "4.5.31", features = ["derive"] }
tokio = { version = "1.39.0", features = ["full"] }
whois-rust = "1.6.0"
rustyline = "12.0"
ctrlc = "3.2.5"
